--- a/css/styleBlokken.css
+++ b/css/styleBlokken.css
@@ -23,6 +23,47 @@ main{
     margin-top: 25px;
 }
 
+.Blokoversight{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 30px;
+    margin-left: 5%;
+    margin-right: 5%;
+    max-width: 85%;
+}
+
+.leerjaar1{
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.leerjaar2{
+    display: flex;
+    flex-direction: column;
+    
+}
+
+
+.Blokken{
+    margin-top: 10px;
+}
+
+.downthere{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 60px;
+}
+
+@media only screen and (max-width: 800px){
+    img{
+        width: 100px;
+    }
+    
+}
+
 footer{
     background-color: rgb(124, 3, 63);
     color: rgb(255, 216, 89);
