--- a/css/styleShared.css
+++ b/css/styleShared.css
@@ -31,3 +31,31 @@ footer{
    bottom: 0;
    width: 100%;
 }
+
+@media only screen and (max-width: 800px) {
+    
+    header img{
+        width: 100px;
+    }
+
+    header a{
+        font-size: 20px;
+        
+        
+    }
+    
+    .nonImageAnchour{
+        border: 2px solid whitesmoke;
+        border-radius: 26px;
+        padding: 2px 10px;
+        
+    }
+
+    .homediv{
+        flex-direction: column;
+    }
+
+    main h1{
+        font-size: 20px;
+    }
+}
