--- a/css/styleVakken.css
+++ b/css/styleVakken.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    background-color: rgb(186, 241, 142);
+    background-color: rgb(166, 230, 115);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #fff;
     text-align: center;
@@ -23,9 +23,30 @@ main{
     margin-top: 25px;
 }
 
+.vakken{
+
+    margin-top: 2%;
+    margin-bottom: 5%;
+    max-width: 85%;
+    margin-left: 7%;
+    margin-right: 2%;
+}
+
+.vak{
+    border: 2px solid rgb(0, 89, 255);
+    border-radius: 20px;
+    background-color: rgb(0, 89, 255);
+    margin-bottom: 5px;
+    padding-top: 5%;
+    padding-bottom: 5%; 
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 footer{
     background-color: rgb(0, 58, 255);
-    color: rgb(186, 241, 142);
+    color: rgb(166, 230, 115);
 }
 
 /* .logoTop img{
