--- a/css/styleBlokken.css
+++ b/css/styleBlokken.css
@@ -29,7 +29,7 @@ main{
     justify-content: space-around;
     margin-top: 30px;
     margin-left: 5%;
-    margin-right: 5%;
+    margin-right: 3.5%;
     max-width: 85%;
 }
 
@@ -52,14 +52,15 @@ main{
 
 .downthere{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     margin-top: 60px;
+    margin-bottom: 7.5%;
 }
 
 @media only screen and (max-width: 800px){
     img{
-        width: 100px;
+        width: 75%;
     }
     
 }
