--- a/css/styleLeraren.css
+++ b/css/styleLeraren.css
@@ -23,6 +23,27 @@ main{
     margin-top: 25px;
 }
 
+.leraren{
+    margin-top: 2%;
+    margin-bottom: 5%;
+    max-width: 85%;
+    margin-left: 7%;
+    margin-right: 2%;
+}
+
+
+.leraar{
+    border: 2px solid rgb(129, 2, 146);
+    border-radius: 20px;
+    background-color: rgb(129, 2, 146);
+    margin-bottom: 2.5%;
+    padding-top: 5%;
+    padding-bottom: 5%; 
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 footer{
     background-color: rgb(95, 2, 107);
     color: rgb(114, 229, 245);
