--- a/css/styleVakken.css
+++ b/css/styleVakken.css
@@ -36,12 +36,20 @@ main{
     border: 2px solid rgb(0, 89, 255);
     border-radius: 20px;
     background-color: rgb(0, 89, 255);
-    margin-bottom: 5px;
+    margin-bottom: 2.5%;
     padding-top: 5%;
     padding-bottom: 5%; 
     display: flex;
     flex-direction: row;
     justify-content: center;
+    
+}
+
+.vak p{
+    max-width: 75%;
+}
+.vak img{
+    min-width: 15%;
 }
 
 footer{
