--- a/css/styleRooster.css
+++ b/css/styleRooster.css
@@ -23,6 +23,13 @@ main{
     margin-top: 25px;
 }
 
+h3{
+    margin-bottom: 2.5%;
+}
+
+img{
+    margin-bottom: 2.5%;
+}
 footer{
     background-color: rgb(255, 208, 0);
     color: rgb(188, 122, 255);
